adds several ui elements
adds simple css to navbar
adds some routing to the navbar
adds login page(non functional)
adds registration component
added an image asset to be used as a background later

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,1 +1,14 @@
-<p>login works!</p>
+<div>
+    <h2>Login</h2>
+    <form>
+        <div class="input-box">
+            <span>Username</span>
+            <input type="text">
+        </div>
+        <div class="input-box">
+            <span>Password</span>
+            <input type="password">
+        </div>
+        <p>Don't have an account with us? <span><a routerLink="/registration">Register Here</a></span></p>
+    </form>
+</div>
