--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,8 @@
-<p>navbar works!</p>
+<ul>
+    <li><a>Logo</a></li>
+    <li><a routerLink="">Home</a></li>
+    <li><a>News</a></li>
+    <li><a>Contact</a></li>
+    <li><a>About</a></li>
+    <li><button routerLink="login">Login</button></li>
+</ul>
