updates views and css
updates login page css
adds registration view
moves login button to the right side

--- a/frontend/src/app/components/login/login.component.css
+++ b/frontend/src/app/components/login/login.component.css
@@ -1,21 +1,28 @@
-/* 
+
 .input-box {
     width: 170px;
-    border-bottom: 1px solid;
 }
 
 .input-box label {
     position: relative;
-    left: 5px;
+    top: -20px;
     transform: translateY(-50%);
+    transition: .5s;
 }
 
 .input-box input:focus~label{
-    top: -5px;
+    top: -35px;
 }
 
 .input-box input{
-    background: none;
     outline: none;
     border:none;
-} */
+    border-bottom: 1px solid;
+}
+
+.container {
+    height: 80vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
