--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -1,1 +1,17 @@
-<p>register works!</p>
+<div class="container">
+    <div class="form">
+        <h2>Registration</h2>
+        <form>
+            <div class="input-box">
+                <input type="text">
+                <label>Username</label>
+            </div>
+            <div class="input-box">
+                <input type="password">
+                <label>Password</label>
+            </div>
+            <p>Already have an account?<span><a routerLink="/login">Login Here</a></span></p>
+            <button>Login</button>
+        </form>
+    </div>
+</div>
