--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,14 +1,17 @@
-<div>
-    <h2>Login</h2>
-    <form>
-        <div class="input-box">
-            <span>Username</span>
-            <input type="text">
-        </div>
-        <div class="input-box">
-            <span>Password</span>
-            <input type="password">
-        </div>
-        <p>Don't have an account with us? <span><a routerLink="/registration">Register Here</a></span></p>
-    </form>
+<div class="container">
+    <div class="form">
+        <h2>Login</h2>
+        <form>
+            <div class="input-box">
+                <input type="text">
+                <label>Username</label>
+            </div>
+            <div class="input-box">
+                <input type="password">
+                <label>Password</label>
+            </div>
+            <p>Don't have an account with us? <span><a routerLink="/registration">Register Here</a></span></p>
+            <button>Login</button>
+        </form>
+    </div>
 </div>
