--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -4,5 +4,5 @@
     <li><a>News</a></li>
     <li><a>Contact</a></li>
     <li><a>About</a></li>
-    <li><button routerLink="login">Login</button></li>
+    <li class="nav-right"><button routerLink="login">Login</button></li>
 </ul>
