--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,1 +1,5 @@
-<h1>Home Page</h1>
+<div>
+    <p class="title">{{ title }}</p>
+    <p class="description">{{ body }}</p>
+    <button>Download Resume</button>
+</div>
