--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,9 @@
 <ul>
     <li><a>Logo</a></li>
     <li><a routerLink="">Home</a></li>
-    <li><a>News</a></li>
-    <li><a>Contact</a></li>
-    <li><a>About</a></li>
+    <li><a routerLink="about-me">About Me</a></li>
+    <li><a routerLink="skills">Skills</a></li>
+    <li><a routerLink="projects">Projects</a></li>
+    <li><a routerLink="feed-back">Feed Back</a></li>
     <li class="nav-right"><button routerLink="login">Login</button></li>
 </ul>
